2007-03-06  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/Makefile.am: attempt proper texinfo dependencies

2007-03-05  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: correct version numbers
	* osr61.spec.in: do not release source package

2007-03-04  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* debian/copyright: updates for release
	* doc/manual/news.texi: updates for release

	* osr61.spec.in: do not propagate empty flags
	* debian/rules.in: do not propagate empty flags

	* doc/manual/configure.texi: change driver names
	* doc/manual/descrip.texi: change driver names
	* doc/manual/osr61.texi: change driver names
	* doc/manual/rpm.texi: change driver names
	* doc/manual/tree.texi: change driver names

2007-03-02  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/ctimod/ctimod.c: change exports to GPL
	* src/drivers/dlgn/source/dlgn.c: change exports to GPL

	* acinclude.m4: improvements to common build environment
	* doc/man/Makefile.am: added manula pages
	* doc/man/man4/dlgn.4.man: updated with *Driver name
	* doc/man/man4/dvbm.4.man: updated with *Driver name
	* doc/man/man4/gncfd.4.man: updated with *Driver name
	* doc/man/man4/gpio.4.man: updated with *Driver name
	* doc/man/man4/mercd.4.man: updated with *Driver name
	* doc/man/man4/sctmr.4.man: updated with *Driver name
	* doc/man/man5/osr61.5.man: updated with *Driver name
	* src/drivers/mercd/include/msdlinux.h (__NO_VERSION__): do not redefine
	* doc/manual/news.texi: updated for release

	* doc/man/man4/dlgnDriver.4.man: added manual page
	* doc/man/man4/dvbmDriver.4.man: added manual page
	* doc/man/man4/gncfdDriver.4.man: added manual page
	* doc/man/man4/gpioDriver.4.man: added manual page
	* doc/man/man4/mercdDriver.4.man: added manual page
	* doc/man/man4/sctmrDriver.4.man: added manual page

2007-02-28  Brian Bidulock  <bidulock@openss7.org>
