@@ -1,5 +1,6 @@
 2007-03-06  Brian Bidulock  <bidulock@openss7.org>
 
+	* src/util/modutils/osr61.in: corrected naming of aliases
 	* doc/manual/Makefile.am: attempt proper texinfo dependencies
 
 2007-03-05  Brian Bidulock  <bidulock@openss7.org>
